Fix: Vertical alignment in the header for icons wouldn't align for Bootstrap and Bulma
DD-3096

--- a/css/common.scss
+++ b/css/common.scss
@@ -77,6 +77,7 @@ $table-shade: black !default;
 	--dt-row-stripe: 0, 0, 0;
 	--dt-row-hover: 0, 0, 0;
 	--dt-column-ordering: 0, 0, 0;
+	--dt-header-align-items: center;
 
 	// For blocking elements in extensions (FixedHeader, etc)
 	--dt-html-background: white;
