--- a/css/dataTables.bulma.scss
+++ b/css/dataTables.bulma.scss
@@ -8,6 +8,10 @@
 @import './processing.scss';
 @import './typography.scss';
 
+:root {
+	--dt-header-align-items: flex-start;
+}
+
 // This doesn't yet work with the Bulma's CSS variables. DataTables' CSS variables
 // will need an overhaul before they work seamlessly. 
 :root {
